unpackaged/main/default/objects/Marketing_Source_List__c/Marketing_Source_List__c.object-meta.xml
<CustomObject>
    <description>Show Exhibitor Contact list for Marketing Campaigns</description>
    <label>Marketing Source List</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>Marketing Source List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Source List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>