unpackaged/main/default/objects/Marketing_Source_List__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Source List</relationshipLabel>
    <relationshipName>Marketing_Source_List</relationshipName>
    <type>Lookup</type>
</CustomField>