unpackaged/main/default/objects/Marketing_Source_List__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Source List</relationshipLabel>
    <relationshipName>Marketing_Source_List</relationshipName>
    <type>Lookup</type>
</CustomField>