unpackaged/main/default/objects/Marketing_Source_List__c/fields/Lead_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_Last_Name__c</fullName>
    <formula>Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Contact Last Name</label>
    <type>Text</type>
</CustomField>