unpackaged/main/default/objects/Marketing_Source_List__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <formula>Show_Occurrence__r.Show_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Name</label>
    <type>Text</type>
</CustomField>