unpackaged/main/default/objects/Marketing_Source_List__c/fields/Show_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Occurrence</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Marketing Source List</relationshipLabel>
    <relationshipName>Marketing_Source_List</relationshipName>
    <type>Lookup</type>
</CustomField>