unpackaged/main/default/objects/Marketing_Source_List__c/fields/Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Code__c</fullName>
    <description>Campaign Source Code</description>
    <label>Source Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>